updated packagr json

--- a/my-new-angular-app/angular.json
+++ b/my-new-angular-app/angular.json
@@ -107,5 +107,8 @@
       }
     }
   },
-  "defaultProject": "my-new-angular-app"
+  "defaultProject": "my-new-angular-app",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
