--- a/my-new-angular-app/package.json
+++ b/my-new-angular-app/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "@ngxs/store": "^3.7.3",
+    "@ngxs/logger-plugin": "^3.7.3-dev.master-8ecbd7f",
+    "@ngxs/router-plugin": "^3.7.3",
+    "@ngxs/store": "^3.7.3-dev.master-8ecbd7f",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,6 +29,7 @@
     "@angular-devkit/build-angular": "~13.2.5",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
+    "@ngrx/schematics": "^13.0.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
